--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Decodificador de Textos</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -13,7 +14,10 @@
 
         </header>
         <main>
-
+            <h2>Apenas letras minúsculas e sem acento.</h2>
+            <a>Criptografar</a>
+            <a>Descriptografar</a>
+            <img src="imagem.png" alt="imagem de uma pessoa buscando">
         </main>
         <footer>
 
