implementacao do flexbox

--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <img src="logo.png" alt="logo do Decodificador">
-            <h1> Digite seu texto</h1>
-
+        <header>  
+            <img src="logo.png" alt="logo do Decodificador">        
         </header>
-        <main>
-            <h2>Apenas letras minúsculas e sem acento.</h2>
-            <a>Criptografar</a>
-            <a>Descriptografar</a>
-            <img src="imagem.png" alt="imagem de uma pessoa buscando">
+        <main class="apresentacao">
+            <section class="apresentacao_conteudo"> 
+                <h1> Digite seu texto</h1>
+                <h2>Apenas letras minúsculas e sem acento.</h2>
+                <a>Criptografar</a>
+                <a>Descriptografar</a>
+            </section>
+            <img src="imagem.png" alt="imagem de pessoa buscando">
         </main>
         <footer>
 
