--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
     </head>
     <body>
         <header>  
-            <img src="logo.png" alt="logo do Decodificador">        
+            <img class="header__logo" src="logo.png" alt="logo do Decodificador">        
         </header>
-        <main class="apresentacao">
-            <section class="apresentacao_conteudo"> 
+        <main>
+            <section class="conteudo_esquerda"> 
                 <h1> Digite seu texto</h1>
-                <h2>Apenas letras minúsculas e sem acento.</h2>
-                <a>Criptografar</a>
-                <a>Descriptografar</a>
+                <div>
+                    <div class="conteudo_esquerda_exclamacao">
+                        <img src="exclamacao.png" alt="imagem de exclamação">
+                        <h6>Apenas letras minúsculas e sem acento.</h6>
+                    </div>
+                    <div class="conteudo_esquerda_botoes">
+                        <a class="botao_criptografar"> Criptografar</a>
+                        <a class="botao_descriptografar"> Descriptografar</a>
+                    </div>
+                </div>
             </section>
-            <img src="imagem.png" alt="imagem de pessoa buscando">
+            <section class="conteudo_direita">
+                <img class="conteudo_direita_imagem" src="imagem.png" alt="imagem de pessoa buscando">
+                <h3 class="conteudo_direita_texto">Nenhuma mensagem encontrada</h3>
+                <p class="conteudo_direita_paragrafo"> Digite um texto que você deseja criptografar ou descriptografar.</p>
+                <a class="botao_copiar"> Copiar</a>
+            </section>
         </main>
         <footer>
 
