incluindo responsividade e criacao de pastas assets e styles

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Decodificador de Textos</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./styles/style.css">
     </head>
     <body>
         <header>  
-            <img class="header__logo" src="logo.png" alt="logo do Decodificador">        
+            <img class="header__logo" src="./assets/logo.png" alt="logo do Decodificador">        
         </header>
         <main>
             <section class="conteudo_esquerda"> 
                 <h1> Digite seu texto</h1>
                 <div>
                     <div class="conteudo_esquerda_exclamacao">
-                        <img src="exclamacao.png" alt="imagem de exclamação">
+                        <img src="./assets/exclamacao.png" alt="imagem de exclamação">
                         <h6>Apenas letras minúsculas e sem acento.</h6>
                     </div>
                     <div class="conteudo_esquerda_botoes">
@@ -26,14 +26,14 @@
                 </div>
             </section>
             <section class="conteudo_direita">
-                <img class="conteudo_direita_imagem" src="imagem.png" alt="imagem de pessoa buscando">
+                <img class="conteudo_direita_imagem" src="./assets/imagem.png" alt="imagem de pessoa buscando">
                 <h3 class="conteudo_direita_texto">Nenhuma mensagem encontrada</h3>
                 <p class="conteudo_direita_paragrafo"> Digite um texto que você deseja criptografar ou descriptografar.</p>
                 <a class="botao_copiar"> Copiar</a>
             </section>
         </main>
-        <footer>
-
+        <footer class="rodape">
+            <p> inaiane.mbarros@gmail.com</p>
         </footer>
     </body>
 
